kube-certs/deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-certs
  namespace: demo
spec:
  selector:
    matchLabels:
      app: kube-certs
  template:
    metadata:
      labels:
        app: kube-certs
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: saiyam911/kube-certs:sha-848915f
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kube-certs
  namespace: demo
spec:
  selector:
    app: kube-certs
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: kubeissuer
    kubernetes.io/ingress.class: nginx
  name: kube-certs-ingress
  namespace: demo
spec:
  rules:
    - host: demo.${CLUSTER_DNS}
      http:
        paths:
          - backend:
              service:
                name: kube-certs
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - demo.${CLUSTER_DNS}
      secretName: demo
